# mynode

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
config/: node-a.yaml  node-b.yaml  node-c.yaml  node-d.yaml  node-e.yaml  node.yaml
protobuf/: common.proto  kvtest.proto  raft.proto  store.proto
src/: client.rs  error.rs  lib.rs  node.rs  serializer.rs  state.rs
src/handlers/: kvtest.rs  mod.rs  raft.rs  store.rs  store_raft.rs
src/proto/: mod.rs
src/raft/: log.rs  mod.rs  transport.rs
src/raft/node/: candidate.rs  follower.rs  leader.rs  mod.rs
src/sql/: expression.rs  mod.rs  schema.rs  storage.rs  tests.rs  types.rs
src/sql/parser/: ast.rs  lexer.rs  mod.rs
src/sql/plan/: expression.rs  insert.rs  mod.rs  node.rs  planner.rs  projection.rs
src/sql/testdata/: drop_table  expr_literal_string_quotes
src/sql/testdata/select_alone_literal_string_quotes/: ast  plan  tokens
src/store/: file.rs  kvmemory.rs  mod.rs  raft.rs
